build: add required exports
We need to export some JDK internals for various plugins used
for code generation and inspection.
These JVM options are automatically picked up by maven.